Dark Mode Bug fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
   --primary: #f14f4f;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
